[package]
name = "factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.6"
ic-cdk = "0.11.0"
ic-cdk-macros = "0.8.0"
icrc-ledger-types = "0.1.1"
serde = { version = "1.0.188", features = ["derive"] }